fix: rerun notebook

--- a/notebooks/bibliona_recsys.ipynb
+++ b/notebooks/bibliona_recsys.ipynb
@@ -1249,49 +1249,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Results: {'MAE': 1.1489756331550751, 'RMSE': 1.541152670073595, 'Precision@K': 0.0033333333333333344, 'Recall@K': 0.02342995169082126}\n",
+      "Evaluation Results: {'MAE': 1.1489836973502834, 'RMSE': 1.5397492929288827, 'Precision@K': 0.0034782608695652184, 'Recall@K': 0.02141304347826087}\n",
       "\n",
       "Top 10 recommendations for user 243:\n",
       "Item ID: 0553274295, Score: 1.00, Confidence: High\n",
       "   Title: Where the Red Fern Grows\n",
       "   Year: 2016, Publisher: Random House Children's Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.6607127219437223, 'interaction': 0.03230855405558424, 'final_pred': 9.630750942368923}\n",
-      "Item ID: 0345339738, Score: 0.94, Confidence: High\n",
-      "   Title: The Return of the King (The Lord of the Rings, Part 3)\n",
-      "   Year: 1986, Publisher: Del Rey\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.3018960295227409, 'interaction': 0.07060797142738144, 'final_pred': 9.31023366731974}\n",
-      "Item ID: 0446310786, Score: 0.93, Confidence: High\n",
-      "   Title: To Kill a Mockingbird\n",
-      "   Year: 1993, Publisher: Little Brown & Company\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.0238176133437267, 'interaction': 0.2805794702820169, 'final_pred': 9.24212674999536}\n",
-      "Item ID: 0877017883, Score: 0.93, Confidence: High\n",
-      "   Title: Griffin & Sabine: An Extraordinary Correspondence\n",
-      "   Year: 1991, Publisher: Chronicle Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.100514032327014, 'interaction': 0.17127901114755595, 'final_pred': 9.209522709844187}\n",
-      "Item ID: 0439136369, Score: 0.92, Confidence: High\n",
-      "   Title: Harry Potter and the Prisoner of Azkaban (Book 3)\n",
-      "   Year: 1999, Publisher: Scholastic\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 0.9381942599825042, 'interaction': 0.31813973395019635, 'final_pred': 9.19406366030232}\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 1.590412227485686, 'interaction': 0.162644995236946, 'final_pred': 9.674031664999578}\n",
       "Item ID: 0679723161, Score: 0.92, Confidence: High\n",
       "   Title: Lolita (Vintage International)\n",
       "   Year: 1997, Publisher: Vintage\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.236894921154593, 'interaction': -0.007622696021822665, 'final_pred': 9.167001891502387}\n",
-      "Item ID: 0345339681, Score: 0.91, Confidence: High\n",
-      "   Title: The Hobbit : The Enchanting Prelude to The Lord of the Rings\n",
-      "   Year: 1956, Publisher: Del Rey\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 0.8307532397360499, 'interaction': 0.32766927072813185, 'final_pred': 9.0961521768338}\n",
-      "Item ID: 043935806X, Score: 0.91, Confidence: High\n",
-      "   Title: Harry Potter and the Order of the Phoenix (Book 5)\n",
-      "   Year: 2003, Publisher: Scholastic\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 0.9645977204275015, 'interaction': 0.18910792620870015, 'final_pred': 9.09143531300582}\n",
-      "Item ID: 0812550706, Score: 0.90, Confidence: High\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 1.27488768056492, 'interaction': 0.060040996812055006, 'final_pred': 9.255903119653924}\n",
+      "Item ID: 0345361792, Score: 0.90, Confidence: High\n",
+      "   Title: A Prayer for Owen Meany\n",
+      "   Year: 1990, Publisher: Ballantine Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 1.0983013434876256, 'interaction': 0.14839359094842494, 'final_pred': 9.167669376712999}\n",
+      "Item ID: 0345339738, Score: 0.88, Confidence: High\n",
+      "   Title: The Return of the King (The Lord of the Rings, Part 3)\n",
+      "   Year: 1986, Publisher: Del Rey\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 1.3541305080995913, 'interaction': -0.24736366545705069, 'final_pred': 9.027741284919488}\n",
+      "Item ID: 0440998050, Score: 0.87, Confidence: High\n",
+      "   Title: A Wrinkle in Time\n",
+      "   Year: 1976, Publisher: Laure Leaf\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 0.9542304664645963, 'interaction': 0.14576048050519672, 'final_pred': 9.020965389246742}\n",
+      "Item ID: 0877017883, Score: 0.87, Confidence: High\n",
+      "   Title: Griffin & Sabine: An Extraordinary Correspondence\n",
+      "   Year: 1991, Publisher: Chronicle Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 1.1397420942676781, 'interaction': -0.07377319836006861, 'final_pred': 8.986943338184556}\n",
+      "Item ID: 0812550706, Score: 0.86, Confidence: High\n",
       "   Title: Ender's Game (Ender Wiggins Saga (Paperback))\n",
       "   Year: 2013, Publisher: Tor Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.0470816835933647, 'interaction': 0.10105780281819457, 'final_pred': 9.085869152781177}\n",
-      "Item ID: 0345465083, Score: 0.90, Confidence: High\n",
-      "   Title: Seabiscuit\n",
-      "   Year: 2002, Publisher: Ballantine Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.0608192097793536, 'interaction': 0.052099573824475484, 'final_pred': 9.050648449973448}\n"
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 1.0830093348550451, 'interaction': -0.06541437607446948, 'final_pred': 8.938569401057523}\n",
+      "Item ID: 0385492081, Score: 0.86, Confidence: High\n",
+      "   Title: Into Thin Air : A Personal Account of the Mt. Everest Disaster\n",
+      "   Year: 1998, Publisher: Anchor\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 0.8271576851535549, 'interaction': 0.18623456208060662, 'final_pred': 8.934366689511108}\n",
+      "Item ID: 0345339711, Score: 0.86, Confidence: High\n",
+      "   Title: The Two Towers (The Lord of the Rings, Part 2)\n",
+      "   Year: 2001, Publisher: Del Rey\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 1.0639959728213466, 'interaction': -0.05569406235450526, 'final_pred': 8.92927635274379}\n",
+      "Item ID: 0439139597, Score: 0.85, Confidence: High\n",
+      "   Title: Harry Potter and the Goblet of Fire (Book 4)\n",
+      "   Year: 2000, Publisher: Scholastic\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.056329899182896166, 'item_bias': 0.9527799915246601, 'interaction': 0.04693569207661406, 'final_pred': 8.920690125878222}\n"
      ]
     }
    ],
@@ -1482,7 +1482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== User 243 Rating Analysis ===\n",
+      "User 243 Rating Analysis\n",
       "User 243 has rated 10 books\n",
       "Average rating: 7.9\n",
       "\n",
@@ -1500,7 +1500,16 @@
       "  4. Unnatural Exposure - 9.0 stars\n",
       "  5. The General's Daughter - 9.0 stars\n",
       "\n",
-      "=== User 243 Preferences Analysis ===\n",
+      "Lowest 5 rated books:\n",
+      "  1. Chicken Soup for the Soul (Chicken Soup for the Soul) - 5.0 stars\n",
+      "  2. Manhattan Hunt Club - 6.0 stars\n",
+      "  3. The God of Small Things - 7.0 stars\n",
+      "  4. River, Cross My Heart - 7.0 stars\n",
+      "  5. A Painted House - 7.0 stars\n",
+      "\n",
+      "\n",
+      "\n",
+      "User 243 Preferences Analysis\n",
       "Top 5 Authors (by average rating):\n",
       "  1. Barbara Kingsolver - 10.0 stars (1 books)\n",
       "  2. Arthur Golden - 10.0 stars (1 books)\n",
@@ -1519,7 +1528,7 @@
    ],
    "source": [
     "# Test the new functions for user 243\n",
-    "print(\"=== User 243 Rating Analysis ===\")\n",
+    "print(\"User 243 Rating Analysis\")\n",
     "rating_analysis = analyze_user_rating_distribution(243, ratings_df, itemprofile_df)\n",
     "if 'error' not in rating_analysis:\n",
     "    print(f\"User {rating_analysis['user_id']} has rated {rating_analysis['total_ratings']} books\")\n",
@@ -1532,7 +1541,15 @@
     "    for i, book in enumerate(rating_analysis['rated_books'][:5]):\n",
     "        print(f\"  {i+1}. {book['title']} - {book['rating']} stars\")\n",
     "\n",
-    "print(\"\\n=== User 243 Preferences Analysis ===\")\n",
+    "    # Print the lowest 5 rated books\n",
+    "    sorted_by_lowest_rating: list = sorted(rating_analysis['rated_books'], key=lambda x: x['rating'])\n",
+    "    print(f\"\\nLowest 5 rated books:\")\n",
+    "    for i, book in enumerate(sorted_by_lowest_rating[:5]):\n",
+    "        print(f\"  {i+1}. {book['title']} - {book['rating']} stars\")\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"\\nUser 243 Preferences Analysis\")\n",
     "preferences_analysis = analyze_user_preferences(243, ratings_df, itemprofile_df)\n",
     "if 'error' not in preferences_analysis:\n",
     "    print(\"Top 5 Authors (by average rating):\")\n",
